--- a/LAHJA/Pages/Logins/Index.razor
+++ b/LAHJA/Pages/Logins/Index.razor
@@ -22,7 +22,7 @@
 
         if (isAuth)
         {
-            <Loading IsLoading="true" />
+            <Loading IsLoading="_isLoaded" />
         }
         else
         {
@@ -33,9 +33,8 @@
     }
     else
     {
-        <Loading IsLoading="true" />
-      
-
+        <Loading IsLoading="_isLoaded" />
+     
     }
 
 
@@ -47,32 +46,19 @@
 {
     private bool _isLoaded = true;
     private bool isAuth = false;
-    // protected override async void OnAfterRender(bool firstRender)
-    // {
-    //     base.OnAfterRender(firstRender);
 
-    //     if (firstRender)
-    //     {
-    //         var isAuth =await getAuthAsync();
-    // if (isAuth)
-    // {
-    //     Navigation.NavigateTo("/");
-    // }
-    // _isLoaded = false;
-    // StateHasChanged();
-    //     }
-
-    // }
-    protected override async void OnAfterRender(bool firstRender)
+    protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
         {
             isAuth = await getAuthAsync();
-            StateHasChanged();
+        
             if (isAuth)
             {
                 Navigation.NavigateTo("/");
             }
+
+            await Task.Delay(1000);
             _isLoaded = false;
             StateHasChanged();
 
@@ -80,66 +66,7 @@
 
     }
 
-    // <TemplateAuth OnLoginSubmit="HandleLoginSubmit" OnRegisterSubmit="HandRegisterSubmit" IsToLoginMode="toLoginMode" ErrorMessages="errorMessages" />
-    // bool toLoginMode = false;
-    // List<string> errorMessages { get; set; } = new List<string>();
-
-    // private async Task HandleLoginSubmit(LoginRequest data)
-    // {
-    //     if (data != null)
-    //     {
-
-    //         var response = await ClientAuthService.loginAsync(data);
-    //         if (response.Succeeded)
-    //         {
-
-    //             AppCustomAuthenticationStateProvider.StoreAuthenticationData(response.Data.accessToken);
-    //             Snackbar.Add("Successfully", Severity.Success);
-    //             Navigation.NavigateTo("/", forceLoad: true);
-    //         }
-    //         else
-    //         {
-    //             if (response.Messages != null && response.Messages.Count() > 0)
-    //             {
-    //                 errorMessages.AddRange(response.Messages);
-    //                 Snackbar.Add(response.Messages[0], Severity.Error);
-    //             }
-    //         }
-
-
-    //     }
-
-
-    // }
-    // private async Task HandRegisterSubmit(RegisterRequest data)
-    // {
-    //     if (data != null)
-    //     {
-
-    //         var response = await ClientAuthService.registerAsync(data);
-    //         if (response.Succeeded)
-    //         {
-    //             toLoginMode = true;
-
-    //             Snackbar.Add("Successfully", Severity.Success);
-
-    //             StateHasChanged();
-
-    //         }
-    //         else
-    //         {
-    //             if (response.Messages != null && response.Messages.Count() > 0)
-    //             {
-    //                 errorMessages.AddRange(response.Messages);
-    //                 Snackbar.Add(response.Messages[0], Severity.Error);
-    //             }
-    //         }
-
-
-    //     }
-
-    // }
-    //<LAHJA.Components.T.Login OnClickLogenDeb="@HandelLogout"  FlagDev=true />
+   
    
 
 }
