--- a/LAHJA/UI/Components/ProFile/Dashboard.razor
+++ b/LAHJA/UI/Components/ProFile/Dashboard.razor
@@ -4,11 +4,13 @@
 @attribute [Authorize]
 
 
-    <iframe src="https://modelspeech.onrender.com/dashboard/"
+  @*   <iframe src="https://modelspeech.onrender.com/dashboard/"
             width="100%"
             height="700"
             style="border: none;height:700px">
-    </iframe>
+    </iframe> *@
+
+<IframeComponent StyleCss="width:100%;height:700px !important;border:none" IsLoading="true" ServiceId="serv_5c095af3909547e888f2a0636a307ff9" />
 
     @* <MainPieChart /> *@
     @* < div class="mt-4" />
