--- a/LAHJA/wwwroot/css/style1.css
+++ b/LAHJA/wwwroot/css/style1.css
@@ -708,12 +708,12 @@ body {
 
 
 /* إذا كان المستخدم يفضل الوضع الليلي */
-@media (prefers-color-scheme: dark) {
+/*@media (prefers-color-scheme: dark) {
     body {
         background-color: #121212;
         color: #e0e0e0;
     }
-}
+}*/
 /* الوضع ملف شخصي */
 
 /*
