--- a/LAHJA/UI/Components/StudioLahjaAi/ChatT2Text.razor
+++ b/LAHJA/UI/Components/StudioLahjaAi/ChatT2Text.razor
@@ -1,3 +1,4 @@
+@using LAHAJ.Loading
 @using LAHJA.Data.UI.Models.Studio
 @using LAHJA.Data.UI.Components.StudioLahjaAiVM
 @using LAHJA.Data.UI.Models
@@ -11,12 +12,23 @@
 @using LAHJA.ApiClient.Services.Query
 
 @inherits StudioAi
-<iframe 
-        src="https://modelspeech.onrender.com/chatbot/" 
+
+@if (!string.IsNullOrEmpty(_srcFrame))
+{
+
+    <iframe src="@_srcFrame"
         width="100%" 
         height="600" 
-        style="border: none;height:100%">
+        style="border: none;height:100%"
+            onload="@OnFrameLoaded">
     </iframe>
+
+}
+
+@if (isLoading)
+{
+    <Loading IsLoading="@isLoading" />
+}
 @* <MudCard Elevation="25" Class="rounded-lg p-0 border-0  h-100 d-flex flex-column" Style="max-width: 100%; margin: auto;">
     @if (DataBuild != null)
     {
@@ -103,11 +115,22 @@
 @code {
 
     private string textSpeech;
-    private bool isProcessing=false;
-
+  
 
 
     private List<ChatMessage> ChatMessages = new();
+
+
+  
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+
+            await CreateSessionTokenAsync();
+        }
+    }
 
     public new async Task SpeechMessage(ChatMessage message)
     {
