--- a/LAHJA/UI/Components/TabelCard/StateCell.razor
+++ b/LAHJA/UI/Components/TabelCard/StateCell.razor
@@ -2,14 +2,29 @@
 
 
 @code{
-    [Parameter] public object? State { set; get; }
+    [Parameter] public object? State { set {
+            if (value != null)
+            {
+                _state = value;
+                ChangeStyle(_state);
+            }
+        }
+        get => _state;
+    }
 
 
     private Color color=Color.Default;
+    private object? _state;
 
     protected override void OnInitialized()
     {
-        var s = State?.ToString();
+        ChangeStyle(_state);
+
+    }
+
+    private void ChangeStyle(object? _state)
+    {
+        var s = _state?.ToString();
         if (s == "نشط" || s == "Active" || s == "True")
         {
             color = Color.Success;
@@ -20,6 +35,5 @@
 
         }
         StateHasChanged();
-
     }
 }
